# cannbench

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml
deploy/nginx/: cannbench-https.conf
deploy/systemd/: cannbench-serve.service
docs/: ADDING_OPERATOR_BENCHMARK.zh-CN.md  cuda-main-node-exploration-plan.md
docs/contracts/: published-data-contract.md
docs/datasets/: dsa-real-sources.md
docs/designs/: 2026-07-08-lightning-indexer-simt-custom-op-v1-design.md  2026-07-20-sparse-attention-hd128-prefill-fused-design.md  2026-07-22-lightning-indexer-fp16-fused-kernel-design.md  2026-07-24-dsa-hd256-hd576-cv-fusion-design.md  ascend-simt-dsa-operators-design.md  dsa-inference-fusion-spec.md
docs/guides/: adding-operator-benchmark.zh-CN.md  cli-usage.md  frontend-and-upload.md  release-and-deployment.md  remote-benchmarking.md
docs/issues/: 001-ascend-msprof-op-iterations.md  002-ascend-simt-softmax-row-wise-v2.md
docs/optimization/: cuda-main-node-exploration-plan.md  cuda-operator-optimization-best-practices.md
docs/plans/: 2026-07-24-dsa-hd256-hd576-cv-fusion-plan.md
docs/superpowers/specs/: 2026-07-16-dsa-api-boundary-contraction-design.md
docs/treasure-map/: cuda-background-prompt.md  cuda-route-nodes.md
published/: index.json
published/ascend-vllm-dsa-decode-a5-realistic-202607050035/meta/: benchmark-records.json  failures.json  summary.csv  summary.json
published/ascend-vllm-dsa-decode-a5-realistic-202607050035/perf/: lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx16384_top1024-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx16384_top1024-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx16384_top1024-bfloat16-seed0.md  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx2048_top512-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx2048_top512-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx2048_top512-bfloat16-seed0.md  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx4096_top512-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx4096_top512-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx4096_top512-bfloat16-seed0.md  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx512_top512-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx512_top512-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx512_top512-bfloat16-seed0.md  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx8192_top512-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx8192_top512-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b1_ctx8192_top512-bfloat16-seed0.md  lightning_indexer-realistic_decode-deepseek_a5_decode_b2_ctx4096_top512-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b2_ctx4096_top512-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b2_ctx4096_top512-bfloat16-seed0.md  lightning_indexer-realistic_decode-deepseek_a5_decode_b4_ctx4096_top512-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b4_ctx4096_top512-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b4_ctx4096_top512-bfloat16-seed0.md  lightning_indexer-realistic_decode-deepseek_a5_decode_b8_ctx2048_top512-bfloat16-seed0.csv  lightning_indexer-realistic_decode-deepseek_a5_decode_b8_ctx2048_top512-bfloat16-seed0.json  lightning_indexer-realistic_decode-deepseek_a5_decode_b8_ctx2048_top512-bfloat16-seed0.md  (+24 more)
published/default/meta/: benchmark-records.json
src/: cannbench_cuda_dsa.py  cannbench_cuda_dsa_flashmla_deepgemm.py
src/cannbench/: __main__.py  cli.py  release.py  serve.py
src/cannbench/operators/builtin/adaptivemaxpool3dgrad/acl_probe/: CMakeLists.txt  main.cpp
src/cannbench/operators/builtin/index_add/simt/v3/: README.md  pyproject.toml  setup.py
src/cannbench/operators/builtin/index_add/simt/v3/aten_index_add_v3/: ops.py
src/cannbench/operators/builtin/index_add/simt/v3/aten_index_add_v3/csrc/: index_add.cpp
src/cannbench/operators/builtin/index_add/simt/v3/aten_index_add_v3/csrc/simt/: index_add.asc
src/cannbench/operators/builtin/index_add/simt/v3/scripts/: install.sh
src/cannbench/operators/builtin/lightning_indexer/simt/test/compiler_repro/: CMakeLists.txt  README.md  bf16_vf_mixed_abi_repro.asc  bf16_vf_repro.asc  fp16_vf_control.asc
src/cannbench/operators/builtin/softmax/simt/test/compiler_repro/: CMakeLists.txt  README.md  single_tu_switch_repro.asc  split_tu_1024_helper.asc  split_tu_common.h  split_tu_main.asc
tests/: test_ascend_softmax_custom_op.py  test_ascend_softmax_simt_op.py  test_batch.py  test_benchmark_records.py  test_check_gpu_dsa_env.py  test_cli.py  test_config.py  test_cuda_dsa_adapter.py  test_cuda_dsa_flashmla_deepgemm.py  test_datasets.py  test_dsa_workflow.py  test_execution.py  test_external_dsa_adapters.py  test_operator_dispatch.py  test_operator_plugins.py  test_operators.py  test_prepared_input.py  test_profile.py  test_pytorch_backend.py  test_release_build.py  test_remote.py  test_report.py  test_result.py  test_serve.py  test_timing.py
tools/: check_gpu_dsa_env.py  generate_softmax_synthetic_datasets.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
(+412 files in other folders)
