[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cannbench"
version = "0.1.0"
description = "Single-card accelerator benchmarking for NVIDIA and Ascend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cannbench = "cannbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cannbench.operators.builtin.*" = [
  "data/*.json",
  "data/*.md",
  "simt/*",
  "simt/*/*",
  "simt/*/csrc/*",
  "simt/*/csrc/simt/*",
  "simt/test/*",
]
"cannbench.datasets.data.*" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
  "tests",
  "src/cannbench/operators/builtin/softmax/simt/test",
  "src/cannbench/operators/builtin/index_add/simt/test",
  "src/cannbench/operators/builtin/adaptivemaxpool3dgrad/test",
  "src/cannbench/operators/builtin/adaptivemaxpool3dgrad/simt/test",
]
